# RedEngine

./: .gitattributes  .gitignore  CMakeLists.txt  RedEngine.sln  RedEngine.vcxproj  RedEngine.vcxproj.filters
src/: red_common.h  red_engine.c  red_engine_linux.c  red_engine_win32.c  red_graphics.h  red_os.h  red_platform.c  red_platform.h  red_win32.c  red_win32.h
src/graphics/: model.h  opengl.h  red_graphics.h  vulkan.h  vulkan_core.h
src/graphics/shaders/: model.vert
src/os/: red_linux.h  red_os.h  red_platform.h  red_win32.c  red_win32.h
src/os/linux/: red_linux.h  timer.h
src/os/win32/: red_win32.c  red_win32.h
